--- a/src/components/sprites/Squirrel/squirrel.scss
+++ b/src/components/sprites/Squirrel/squirrel.scss
@@ -44,11 +44,8 @@
   50% {
     bottom: 220px;
   }
-  75% {
-    bottom: 200px;
-  }
   100% {
-    bottom: 160px;
+    bottom: 180px;
   }
 }
 
